# ai_browser_automation

./: .gitignore  CDP_DOM_COMPARISON_REPORT.md  README.md  STAGEHAND_REFERENCES_REPORT.md  debug_observe.py  pyproject.toml  requirements.txt  setup.py  test_accessibility_tree.py  test_act_google.py  test_agent_amazon.py  test_cdp_dom_alignment.py  test_iframe_buttons.py  test_iframe_debug.py  test_iframe_tree_content.py  test_iframe_tree_debug.py  test_multi_step_agent.py  test_observe_debug.py  test_observe_example.py  test_real_observe.py  test_typescript_alignment.py  test_with_real_llm.py  test_xpath_text_nodes.py
ai_browser_automation/: __init__.py
ai_browser_automation/a11y/: __init__.py  utils.py  utils_v2.py
ai_browser_automation/agent/: __init__.py  ai_browser_automation_agent.py  anthropic_client.py  base_multi_step_client.py  demo_client.py  handler.py  intelligent_demo_client.py  openai_client.py  provider.py
ai_browser_automation/cache/: __init__.py  base_cache.py  llm_cache.py
ai_browser_automation/cdp/: __init__.py  manager.py  manager_simple.py
ai_browser_automation/core/: __init__.py  ai_browser_automation.py  cdp_integration.py  context.py  errors.py  page.py
ai_browser_automation/dom/: __init__.py  build_scripts.py  debug.py  scripts.py  scroll.py  utils.py  xpath.py
ai_browser_automation/handlers/: __init__.py  act.py  base.py  extract.py  observe.py
ai_browser_automation/llm/: __init__.py  anthropic_client.py  client.py  google_client.py  mock_client.py  openai_client.py  provider.py
ai_browser_automation/types/: __init__.py  agent.py  browser.py  models.py  observe.py
ai_browser_automation/utils/: logger.py
docs/: CDP_QUICK_REFERENCE.md  CDP_WORKFLOW_DIAGRAM.md  CDP_XPATH_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md
examples/: basic_test.py  cdp_demo.py  cdp_features_demo.py  debug_observe.py  detailed_test.py  dom_test.py  google_search_test.py  google_test.py  handler_test.py  llm_test.py  mock_test.py  openai_test.py  simple_search_test.py  test_agent.py  test_agent_demo.py  test_agent_tasks.py  test_caching.py  test_cdp_debug.py  test_cdp_xpath.py  test_cdp_xpath_debug.py  test_cdp_xpath_debug2.py  test_cdp_xpath_simple.py  test_direct_xpath.py  test_fill_fix.py  test_improved_click.py  test_self_healing.py  test_xpath_click.py  youtube_test.py
playwright_ai/: __init__.py
playwright_ai/a11y/: __init__.py  utils.py  utils_v2.py
playwright_ai/agent/: __init__.py  anthropic_client.py  base_multi_step_client.py  client.py  demo_client.py  handler.py  intelligent_demo_client.py  openai_client.py  provider.py  (+1 more)
(+38 files in other folders)
